[package]
name = "tfhe-test"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "=4.4.4"
log = "0.4"
simplelog = "0.12"
walkdir = "2.5.0"
no-comment = "0.0.3"
tfhe = { git = "https://github.com/hellokittyboy-code/tfhe-rs.git", features = ["boolean", "shortint", "integer", "gpu"]}
chrono = "0.4"
